--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-art-template": "^1.0.1",
-    "mint": "^0.3.5",
     "mint-ui": "^2.2.13",
     "moment": "^2.22.2",
     "mysql": "^2.16.0",
+    "vant": "^1.4.5",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1"
+    "vue-preview": "^1.1.3",
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.0.4",
+    "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^1.0.1",
